--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/core": "^10.0.28",
@@ -28,6 +28,11 @@
     "typography-theme-alton": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "babel-jest": "^26.0.1",
+    "babel-preset-gatsby": "^0.4.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
+    "prettier": "2.0.5",
+    "react-test-renderer": "^16.13.1"
   }
 }
