--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19",
-    "typography-theme-alton": "^0.16.19"
+    "typography-theme-alton": "^0.16.19",
+    "typography-theme-noriega": "^0.16.19"
   },
   "devDependencies": {
     "babel-jest": "^26.0.1",
