--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/core": "^10.0.28",
     "gatsby": "^2.22.15",
     "gatsby-plugin-emotion": "^4.3.1",
+    "gatsby-plugin-manifest": "^2.4.9",
     "gatsby-plugin-typography": "^2.5.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-remark": "^2.8.7",
